added grid layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,39 @@
-#carouselExampleIndicators {
+/* #carouselExampleIndicators {
   width: 10px;
   height: 10px;
   border-radius: 100%;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.nav-item a {
-  font-size: 2rem;
+body, html {
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: 400;
+}
+
+.navbar-nav {
+  font-family: 'Poppins', sans-serif;
+  
+}
+
+.selector-for-some-widget {
+  box-sizing: content-box;
+}
+
+.navbar-toggler {
+  color: green;
+}
+.carousel-indicators {
+  height: 15px;
+}
+
+
+@media(min-width: 768px){
+  .w-75 {
+    margin: 0 auto !important;
+  }
 }
